--- a/moru/src/style/moru.css
+++ b/moru/src/style/moru.css
@@ -1,4 +1,10 @@
 .Content {
    margin-top: 50px;
-   margin-bottom: 50px;
+   margin-bottom: 30px;
+}
+
+.title, .webcam, .desc {
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
